--- a/js/IndexFlexBox.html
+++ b/js/IndexFlexBox.html
@@ -35,7 +35,7 @@
         </div>
     </section>  
     <article class="FLEX">
-        <div>
+        <div style="border-left: black 1px solid;">
             <h2>NO SOMOS IGUALES, <br> SOMOS MÁS ESCASOS, <br> MÁS REAL Y MÁS VIRALES.</h2>
             <h3>PIRLO</h3>
         </div>
@@ -47,7 +47,7 @@
             <h2>NÚCLEO DE HIERRO POR <br> FUNSIÓN DE SILICIO= SUPERNOVA.</h2>
             <h3>APPENHEIMER</h3>
         </div>
-        <div>
+        <div style="border-right: black 1px solid;">
             <h2>NO TODOS EL MUNDO SE QUEMA EN EL <br>INFIERNO, LOS LOCOS DISFUTAN <br> BAILAR CON EL DIABLO.</h2>
             <h3>DANIEL SAINT</h3>
         </div>
@@ -56,23 +56,23 @@
         <div>
             <div>
                 <h1>CARL SAGAN</h1>
-                <p>
-                <h2>"EN ALGÚN LUGAR, ALGO INCREIBLE ESTÁ ESPERANDO A SER DESCUBIERTO."</h2>
-                </p>
+                <h2 style="font-size: 1em;">"EN ALGÚN LUGAR, ALGO INCREIBLE ESTÁ ESPERANDO A SER DESCUBIERTO."</h2>
             </div>
         </div>
         <div class="FLEX">
             <div>
-                <img src="../png/frac.png" width="90%" height="90%">
+                <img src="../png/frac.png" width="600px" height="600px">
             </div>
             <div>
-                <img src="../png/extre.png" height="60%" width="90%">
-                <h2>SOLO TENEMOS UNA MARAVILLOSA VIDA COMO PARA VIVIRLA EN RUTINA.</h2>
+                <img src="../png/extre.png" height="300px" width="350px" style="margin-top:10px;"
+                >
+                <h2>"SOLO TENEMOS UNA MARAVILLOSA VIDA COMO PARA VIVIRLA EN RUTINA."</h2>
+                <h3>NARPI</h3>
             </div>
             <div>
-                <img src="../png/fra.png" height="60% " width="90%">
-                <h2>UNIFICAR LA ESPECIE HUMANA Y AVANZAR ENÉRGICAMENTE EN EL CONOCIMIENTO DE NUESTRO PLANETA Y DE
-                    NOSOTROS MISMOS.</h2>
+                <img src="../png/fra.png" height="300px " width="350px" style="margin-top:10px;">
+                <h2>"UNIFICAR LA ESPECIE HUMANA Y AVANZAR ENÉRGICAMENTE EN EL CONOCIMIENTO DE NUESTRO PLANETA Y DE
+                    NOSOTROS MISMOS."</h2>
             </div>
         </div>
     </aside>
