--- a/js/IndexFlexBox.html
+++ b/js/IndexFlexBox.html
@@ -31,7 +31,7 @@
             <h2>LA SOLEDAD YA NO ASUSTA, AHORA NOS GUSTA. </h2>
         </div>
         <div class="IMG">
-            <img src="../png/futurista.png">
+            <img src="../png/futurista.png" width="650px" height="300px" style="margin: 10px;">
         </div>
     </section>  
     <article class="FLEX">
@@ -61,7 +61,7 @@
         </div>
         <div class="FLEX">
             <div>
-                <img src="../png/frac.png" width="600px" height="600px">
+                <img src="../png/frac.png" width="600px" height="600px" style="margin: 10px;">
             </div>
             <div>
                 <img src="../png/extre.png" height="300px" width="350px" style="margin-top:10px;"
@@ -73,47 +73,48 @@
                 <img src="../png/fra.png" height="300px " width="350px" style="margin-top:10px;">
                 <h2>"UNIFICAR LA ESPECIE HUMANA Y AVANZAR ENÉRGICAMENTE EN EL CONOCIMIENTO DE NUESTRO PLANETA Y DE
                     NOSOTROS MISMOS."</h2>
+                <h3>NARPI</h3>
             </div>
         </div>
     </aside>
     <div>
         <header>
             <h1>LOS GRANDES GENIOS</h1>
-            <h2>"TODOS LOS AVANCES DE LA HUMANIDAD DE DEBEN A LOS HEROES QUE TRABAJAN A DIARIO."</h2>
+            <h2 style="text-align: center;">"TODOS LOS AVANCES DE LA HUMANIDAD DE DEBEN A LOS HEROES QUE TRABAJAN A DIARIO."</h2>
         </header>
         <section class="FLEX-LISTA">
             <div>
                 <aside>
                     <div>
-                        <img src="../png/alber.png" width="60%">
+                        <img src="../png/alber.png" width="310px">
                     </div>
                     <div>
-                        <h3>PADRE DE LA RELATIVIDAD</h3>
-                        <p>TEMO EL DIA EN QUE LA TECNOLOGÍA SOBREPASE NUESTRA HUMANIDAD"</p>
-                    </div>
-                </aside>
-                <aside>
-                    <div>
-                        <img src="../png/marie.png" width="60%">
-                    </div>
-                    <div>
-                        <h3>MADRE DE LA RADIACTIVIDAD</h3>
-                        <p>"LA FAMA ES PARA LOS TONTOS"</p>
+                        <h2 style="text-align: center";>PADRE DE LA RELATIVIDAD</h2>
+                        <h3>TEMO EL DIA EN QUE LA TECNOLOGÍA SOBREPASE NUESTRA HUMANIDAD"</h3>
                     </div>
                 </aside>
                 <aside>
                     <div>
-                        <img src="../png/nikola.png" width="60%">
+                        <img src="../png/marie.png" width="310px">
                     </div>
                     <div>
-                        <h3>PADRE DE LA ELECTRICIDAD ALTERNA</h3>
-                        <p>"SI TU ODIO PUDIERA SER CONVERTIDO EN ELECTRICIDAD, SE PODRIA ILUMINAR EL MUNDO ENTERO"</p>
+                        <h2 style="text-align: center";>MADRE DE LA RADIACTIVIDAD</h2>
+                        <h3>"LA FAMA ES PARA LOS TONTOS"</h3>
+                    </div>
+                </aside>
+                <aside>
+                    <div>
+                        <img src="../png/nikola.png" width="310px">
+                    </div>
+                    <div>
+                        <h2 style="text-align: center";>PADRE DE LA C ALTERNA</h2>
+                        <h3>"SI TU ODIO PUDIERA SER CONVERTIDO EN ELECTRICIDAD, SE PODRIA ILUMINAR EL MUNDO ENTERO"</h3>
                     </div>
                 </aside>
             </div>
             <div>
-                <img src="../png/innovadores.png">
-            </div>
+                <img src="../png/innovadores.png" width="650px">
+            </div>  
         </section>
     </div>
 
