--- a/js/IndexFlexBox.html
+++ b/js/IndexFlexBox.html
@@ -77,8 +77,10 @@
             </div>
         </div>
     </aside>
-    <div>
-        <header>
+
+
+    <div class="GENIOS">
+        <header style="border: black 1px solid;">
             <h1>LOS GRANDES GENIOS</h1>
             <h2 style="text-align: center;">"TODOS LOS AVANCES DE LA HUMANIDAD DE DEBEN A LOS HEROES QUE TRABAJAN A DIARIO."</h2>
         </header>
@@ -90,7 +92,7 @@
                     </div>
                     <div>
                         <h2 style="text-align: center";>PADRE DE LA RELATIVIDAD</h2>
-                        <h3>TEMO EL DIA EN QUE LA TECNOLOGÍA SOBREPASE NUESTRA HUMANIDAD"</h3>
+                        <h3 style="text-align: center ; margin-top: 50px;";>"TEMO EL DIA EN QUE LA TECNOLOGÍA SOBREPASE NUESTRA HUMANIDAD."</h3>
                     </div>
                 </aside>
                 <aside>
@@ -99,7 +101,7 @@
                     </div>
                     <div>
                         <h2 style="text-align: center";>MADRE DE LA RADIACTIVIDAD</h2>
-                        <h3>"LA FAMA ES PARA LOS TONTOS"</h3>
+                        <h3  style="text-align: center ; margin-top: 60px;">"LA FAMA ES PARA LOS TONTOS."</h3>
                     </div>
                 </aside>
                 <aside>
@@ -107,32 +109,32 @@
                         <img src="../png/nikola.png" width="310px">
                     </div>
                     <div>
-                        <h2 style="text-align: center";>PADRE DE LA C ALTERNA</h2>
-                        <h3>"SI TU ODIO PUDIERA SER CONVERTIDO EN ELECTRICIDAD, SE PODRIA ILUMINAR EL MUNDO ENTERO"</h3>
+                        <h2 style="text-align: center";>PADRE DE LA C ALTERNA ~</h2>
+                        <h3  style="text-align: center ; margin-top: 70px;">"SI TU ODIO PUDIERA SER CONVERTIDO EN ELECTRICIDAD, SE PODRIA ILUMINAR EL MUNDO ENTERO."</h3>
                     </div>
                 </aside>
             </div>
             <div>
-                <img src="../png/innovadores.png" width="650px">
+                <img src="../png/innovadores.png" width="650px" height="770px" style="margin: 10px;">
             </div>  
         </section>
     </div>
 
     <div class="SIXPART">
-        <article>
-            <div>
+        <article style="border:black 1px solid;">
+            <div style="border-bottom:black 1px solid;">
                 <h1>LOS INTOCABLES </h1>
             </div>
             <div>
-                <cuadro>
+                <cuadro style="display: flex; border-bottom:black 1px solid;">
                     <img src="../png/bill.png" width="100px">
-                    <p>HOLAa</p>
+                    <h4>HOLAa</h4>
                 </cuadro>
-                <cuadro>
+                <cuadro style="display: flex; border-bottom:black 1px solid;">
                     <img src="../png/elon.png" width="100px">
-                    <p>PORQUE ESTAMOS HACIENDO DINERO, VIAJANDO EL MUNDO COMPRANDO LO QUE QUIERO, EL PROCESO FUE DE CERO
+                    <h4>"PORQUE ESTAMOS HACIENDO DINERO, VIAJANDO EL MUNDO COMPRANDO LO QUE QUIERO, EL PROCESO FUE DE CERO."
                         <br> PIRLO
-                    </p>
+                    </h4>
                 </cuadro>
             </div>
             <botones>
@@ -140,8 +142,8 @@
                 <button>dislike</button>
             </botones>
         </article>
-        <div>
-            <img src="../png/hermes.png">
+        <div style="width: 50% ; border:black 1px solid;">
+            <img src="../png/hermes.png" width: 470px; height="490px">
         </div>
     </div>
 
